@@ -5,7 +5,7 @@
 ConsoleDock::ConsoleDock(QWidget *parent) : QDockWidget(parent)
 {
     /* QDockWidget inherited functions */
-    ConsoleDock::setWindowTitle("Terminal");
+    ConsoleDock::setWindowTitle("Console");
     ConsoleDock::setVisible(false);
     ConsoleDock::setFeatures(AllDockWidgetFeatures);
     // setAllowedAreas(Qt::BottomDockWidgetArea);
@@ -19,27 +19,38 @@ ConsoleDock::ConsoleDock(QWidget *parent) : QDockWidget(parent)
     OuterTab->setTabPosition(QTabWidget::South);
     OuterTab->setTabShape(QTabWidget::Rounded);
 
+
+    OuterTab->addTab(BuildOutput(), "Compiler");
+    OuterTab->addTab(BuildSearchResults(), "Search Results");
+
+}
+
+QWidget *ConsoleDock::BuildOutput()
+{
     InnerTab = new QTabWidget(this);
+
     // features
     InnerTab->setMovable(false);
     InnerTab->setTabsClosable(false);
     InnerTab->setUsesScrollButtons(true);
     InnerTab->setTabPosition(QTabWidget::West);
-    style = new CustomTabStyle();
-    InnerTab->tabBar()->setStyle(style);
+    TabStyle = new CustomTabStyle();
+    InnerTab->tabBar()->setStyle(TabStyle);
 
     Logs = new QPlainTextEdit(this);
     CompileOutput = new QPlainTextEdit(this);
-    RawCompileOutput = new QPlainTextEdit(this);
-    SearchResults = new QWidget(this);
-
-
-    OuterTab->addTab(InnerTab, "Compiler");
-    OuterTab->addTab(SearchResults, "Search Results");
+    RawOutput = new QPlainTextEdit(this);
 
     InnerTab->addTab(Logs, "Logs");
     InnerTab->addTab(CompileOutput, "Compile Output");
-    InnerTab->addTab(RawCompileOutput, "Raw Compile Output");
+    InnerTab->addTab(RawOutput, "Raw Output");
 
+    return InnerTab;
 }
 
+QWidget *ConsoleDock::BuildSearchResults()
+{
+    find_replace = new FindReplaceWidget(true, this);
+
+    return find_replace;
+}
