@@ -9,3 +9,6 @@
 
 * added Console, settings widget
 * create separate dir for widgets -> change include policy
+
+
+- apkstudio searchreplace(change to QWidget, insert into console) -> easy made, qhexedit(new stacked widget in some option field ... think later - maybe new start window at first and some switcher between diferent views --> hexview, editor, llvm binary info, assembler view(find some) ) also 
